--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "sass": "^1.59.3",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.10",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
